<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZEducation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="login_label_username">Email</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_signin">Sign in</string>
    <string name="login_status_logging_in">Login...</string>
    <string name="login_username_hint"></string>
    <string name="login_forgot_password"><a href="#" mce_href="#">Forgot your password?</a></string>
    <string name="login_register_link"><a href="#" mce_href="#">Join the ZEducation</a></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="register_label_signup">Sign up</string>
    <string name="register_login_link"><a href="#" mce_href="#">Sign in now!</a></string>
    <string name="register_label_email">Email:</string>
    <string name="register_label_password">Password:</string>
    <string name="register_label_password_confirm">Password Confirm:</string>
    <string name="register_label_name">Name:</string>
    <string name="register_label_gender">Gender:</string>
    <string name="register_label_phone">Phone:</string>
    <string name="register_label_organization">Organization:</string>
    <string name="register_label_department">Department:</string>
    <string name="register_label_position">Position:</string>
    <string name="register_label_region">Region:</string>
    <string name="must">*</string>
    <string name="find_password_old_password">Old Password:</string>
    <string name="find_password_new_password">New Password:</string>
    <string name="find_password_new_password_confirm">Password Confirm:</string>
    <string name="find_password_submit">submit</string>
    <string name="title_activity_home">ZEducation</string>
    <string name="test">Test</string>
    <string name="home_apply_teacher">Apply</string>
    <string name="title_activity_apply_account">ZEducation</string>
    <string name="apply_account_accountid_label">Account Id:</string>
    <string name="apply_account_password_label">Password:</string>
    <string name="apply_account_valid_label">Is Valid:</string>
    <string name="apply_account_accountid">123456</string>
    <string name="apply_account_password">000000</string>
    <string name="apply_account_valid">Yes</string>
    <string name="title_activity_teacher_home">ZEducation</string>
    <string name="title_activity_all_courses">ZEducation</string>
    <string name="all_courses_close_course">close</string>
    <string name="all_course_connector">------</string>
    <string name="teacher_home_course_name">Course Name:</string>
    <string name="title_activity_apply_history">ApplyHistoryActivity</string>

</resources>