<?xml version="1.0" encoding="UTF-8"?>
<ScrollView    
    xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"    
    android:scrollbars="vertical"    
    android:fadingEdge="vertical">  
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">
    <RelativeLayout 
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/ZEducation_logo"  
             android:src="@drawable/logo"  
             android:layout_width="wrap_content"  
             android:layout_height="wrap_content"  
             android:layout_alignParentTop="true" 
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="40dp" 
          />  
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip"
        
        android:background="@drawable/background_login_div_bg">
        
        <TextView 
            android:id="@+id/name_label"
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_alignParentTop="true"  
            android:layout_marginTop="5dp" 
            android:text="@string/register_label_name"  
            style="@style/normalText"/>
        <EditText
            android:id="@+id/name_edit"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/name_label"  
            android:singleLine="true"  
            android:inputType="text"
            />    
            
        <TextView  
            android:id="@+id/email_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"  
            android:layout_below="@id/name_edit"  
            android:text="@string/register_label_email"  
            style="@style/normalText"
            />           
        <EditText
            android:id="@+id/email_edit"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:hint="@string/login_username_hint"  
            android:layout_below="@id/email_label"  
            android:singleLine="true"  
            android:inputType="text"/>
        
        <TextView  
            android:id="@+id/password_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/email_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_password"  
            style="@style/normalText"/>  
    	<EditText  
            	android:id="@+id/password_edit"  
            	android:layout_width="fill_parent"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/password_label"  
            	android:password="true"  
            	android:singleLine="true"  
            	android:inputType="textPassword"  
    			/>  
    	
    	<TextView  
            android:id="@+id/gender_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/password_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_gender"  
            style="@style/normalText"/>  
         <Spinner 
        	android:id="@+id/register_select_gender"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/gender_label"  />
    	
    	<TextView  
            android:id="@+id/phone_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/register_select_gender"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_phone"  
            style="@style/normalText"/> 
    	<EditText  
            	android:id="@+id/phone_edit"  
            	android:layout_width="fill_parent"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/phone_label"  
            	android:singleLine="true"  
    			/> 
    			
    	<TextView  
            android:id="@+id/organization_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/phone_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_organization"  
            style="@style/normalText"/> 
    	<EditText  
            	android:id="@+id/organization_edit"  
            	android:layout_width="fill_parent"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/organization_label"   
            	android:singleLine="true"   
    			/> 
    			
    	<TextView  
            android:id="@+id/department_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/organization_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_department"  
            style="@style/normalText"/> 
    	<EditText  
            	android:id="@+id/department_edit"  
            	android:layout_width="fill_parent"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/department_label"   
            	android:singleLine="true"  
    			/> 
    			
    	<TextView  
            android:id="@+id/position_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/department_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_position"  
            style="@style/normalText"/> 
    	<EditText  
            	android:id="@+id/position_edit"  
            	android:layout_width="fill_parent"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/position_label"    
            	android:singleLine="true"  
    			/> 
    	
    	<TextView  
            android:id="@+id/region_label"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/position_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/register_label_region"  
            style="@style/normalText"/> 
    	<EditText  
            	android:id="@+id/region_edit"  
            	android:layout_width="fill_parent"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/region_label"  
            	android:singleLine="true"  
    			/> 
    	
    	<Button  
            	android:id="@+id/signup_button"  
            	android:layout_width="wrap_content"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/region_edit"  
            	android:layout_alignRight="@id/password_edit"  
            	android:text="@string/register_label_signup"  
            	android:textColor="@color/login_text"
            	android:layout_marginTop="10dp"  
            	android:background="@drawable/button"  
    			/>


  
    </RelativeLayout>
    
    <RelativeLayout  
      android:layout_width="fill_parent"  
      android:layout_height="wrap_content"  
      >   
         <ImageView android:id="@+id/mainframe_logo"  
             android:src="@drawable/mainframe"  
             android:layout_width="wrap_content"  
             android:layout_height="wrap_content"  
             android:layout_alignParentRight="true"  
             android:layout_alignParentBottom="true" 
             android:layout_marginRight="40dp"   
             android:layout_marginBottom="50dp" 
          />  
 
     </RelativeLayout>  
    
</LinearLayout>
</ScrollView> 