<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/applybg">
    
    <RelativeLayout
        android:id="@+id/account_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dip" >

        <TextView
            android:id="@+id/textView1"
            style="@style/home_apply_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_account_accountid_label" />

        <TextView
            android:id="@+id/account_id"
            style="@style/home_apply_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView1"
            />

        <TextView
            android:id="@+id/textView2"
            style="@style/home_apply_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:text="@string/apply_account_password_label" />

        <TextView
            android:id="@+id/account_password"
            style="@style/home_apply_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            />

        <TextView
            android:id="@+id/textView5"
            style="@style/home_apply_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:text="@string/apply_account_valid_label" />

        <TextView
            android:id="@+id/account_valid"
            style="@style/home_apply_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/textView1"
            />
        
        
        <Button
            	android:id="@+id/apply_account"  
            	android:layout_width="wrap_content"  
            	android:layout_height="wrap_content"  
            	android:layout_below="@id/account_valid"  
            	android:layout_centerHorizontal="true"
            	android:layout_centerVertical="true"
            	android:text="@string/home_apply_teacher"  
            	android:textColor="@color/login_text"
            	android:layout_marginTop="10dp"  
            	android:background="@drawable/button"  
    			/>
        
    </RelativeLayout>

</LinearLayout>